--- a/secret.html
+++ b/secret.html
@@ -3,23 +3,57 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>The Secret</title>
+  <title>World Self Destruction Button</title>
   <style>
     body {
-      background: black;
+      background: #111;
       color: white;
       font-family: Arial, sans-serif;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
+      justify-content: center;
       height: 100vh;
       margin: 0;
-      font-size: 3rem;
       text-align: center;
+    }
+
+    h1 {
+      margin-bottom: 40px;
+      font-size: 2rem;
+      letter-spacing: 2px;
+    }
+
+    .secret-btn {
+      background: red;
+      border: none;
+      border-radius: 20px;
+      padding: 20px 60px;
+      font-size: 2rem;
+      font-weight: bold;
+      color: white;
+      cursor: pointer;
+      box-shadow: 0 8px 0 #a00;
+      transition: all 0.15s ease;
+    }
+
+    .secret-btn:active {
+      transform: translateY(6px);
+      box-shadow: 0 2px 0 #a00;
     }
   </style>
 </head>
 <body>
-  I have huge PP so worship me
+  <h1>World Self Destruction Button</h1>
+  <button class="secret-btn" onclick="reveal()">Don't Click Me</button>
+
+  <script>
+    function reveal() {
+      // Small delay for button animation
+      setTimeout(() => {
+        window.location.href = "final.html"; // this will be your new page
+      }, 200);
+    }
+  </script>
 </body>
 </html>
