--- a/secret.html
+++ b/secret.html
@@ -49,9 +49,8 @@
 
   <script>
     function reveal() {
-      // Small delay for button animation
       setTimeout(() => {
-        window.location.href = "final.html"; // this will be your new page
+        window.location.href = "page3.html"; // next page
       }, 200);
     }
   </script>
