--- a/page3.html
+++ b/page3.html
@@ -50,7 +50,7 @@
   <script>
     function reveal() {
       setTimeout(() => {
-        window.location.href = "final.html"; // next page
+        window.location.href = "page4.html"; // next page
       }, 200);
     }
   </script>
