--- a/page4.html
+++ b/page4.html
@@ -58,13 +58,13 @@
   <script>
     function revealLeft() {
       setTimeout(() => {
-        window.location.href = "left.html"; // page if left is clicked
+        window.location.href = "left.html"; // sends to trap page
       }, 200);
     }
 
     function revealRight() {
       setTimeout(() => {
-        window.location.href = "right.html"; // page if right is clicked
+        window.location.href = "right.html"; // placeholder for right button
       }, 200);
     }
   </script>
