--- a/page4.html
+++ b/page4.html
@@ -58,7 +58,7 @@
   <script>
     function revealLeft() {
       setTimeout(() => {
-        window.location.href = "left.html"; // sends to trap page
+        window.location.href = "page5left.html"; // sends to trap page
       }, 200);
     }
 
